S61861: Fix date picker to allow for filling gaps and updated validation.

--- a/src/apps/roadmapplanningboard/RoadmapPlanningBoardApp.less
+++ b/src/apps/roadmapplanningboard/RoadmapPlanningBoardApp.less
@@ -705,15 +705,15 @@ url-prefix
     border: 0;
 }
 
+.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.rally-datepicker-in-range a {
+    background-color: #CCEEF9;
+    border-color: #CCEEF9;
+}
+
 .roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-disabled a {
     background-color: #929292;
     border-color: #929292;
     color: #eeeeee !important;
-}
-
-.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.rally-datepicker-in-range a {
-    background-color: #CCEEF9;
-    border-color: #CCEEF9;
 }
 
 .roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.rally-datepicker-current-value a {
@@ -732,14 +732,14 @@ url-prefix
     color: #ffffff !important;
 }
 
-.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-disabled a span,
-.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-active a span,
-.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-prevday a span {
+.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-disabled a,
+.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-active a,
+.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-prevday a {
     font-size: 10px;
 }
 
-.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-prevday a span {
-    color: #d6d6d6;
+.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td.x4-datepicker-prevday a {
+    color: #d6d6d6 !important;
 }
 
 .roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner tbody tr td .x4-datepicker-date {
@@ -750,9 +750,10 @@ url-prefix
     border: 1px solid white;
 }
 
-.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner .x4-datepicker-today a span {
-    font-weight: bolder;
+.roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner .x4-datepicker-today a {
     color: black;
+    font-family: NotoSansBold;
+    padding-top: 3px;
 }
 
 .roadmap-planning-popover .x4-datepicker table.x4-datepicker-inner a {
